Implement onboarding flow and enhance authentication features
This commit introduces a new onboarding flow for users, integrating the OnboardingFlow component and updating the Auth component to handle redirects based on user authentication status. The Header component has been enhanced to include a user menu with sign-out functionality, while the MainDashboard and other components have been updated to reflect these changes. Additionally, the Google sign-in feature has been added to improve user experience during authentication. Overall, these updates streamline the onboarding process and enhance user engagement with the application.

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -20,3 +20,12 @@ entrypoint = "./functions/deel-api/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/deel-api/*.html" ]
+
+[auth]
+# Additional redirect URLs for local development
+# Uncomment and use with: supabase start
+# additional_redirect_urls = [
+#   "http://localhost:5173/auth/callback",
+#   "http://localhost:3000/auth/callback",
+#   "http://localhost:8081/auth/callback"
+# ]
